# agent-builder

./: .agentrules  .cursorignore  .cursorindexingignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  PROGRESS.md  PROMPTS.md  README.md  README_SETUP.md  pyproject.toml
.cursor/agents/: 00-orchestrator.md  01-product-manager.md  02-business-analyst.md  03-solution-architect.md  04-frontend-engineer.md  05-backend-engineer.md  06-database-engineer.md  07-integration-engineer.md  08-qa-engineer.md  09-security-engineer.md  10-devops-engineer.md  11-code-reviewer.md  12-refactor-engineer.md  13-documentation-engineer.md  14-logic-algorithm-engineer.md
.cursor/memory/: active_context.md  decisions.md  feature_registry.json  known_patterns.md  project_brief.md
.cursor/rules/: 00-ai-team-core.mdc  10-agent-communication.mdc  20-agent-decision-policy.mdc  30-codebase-discipline.mdc  40-review-and-qa.mdc  50-data-api-database.mdc  60-logic-algorithm-calculation.mdc  70-security-performance.mdc  90-token-efficiency.mdc
.cursor/team/: DASHBOARD_GUIDE.md  PROMPTS.md  README.md  agent_roster.md  communication_protocol.md  integration_map.md  release_notes.md  risk_register.md  task_board.md
docs/: INDEX.md  api_contracts.md  architecture.md  coding_standard.md  dashboard.md  database_schema.md  known_issues.md  module_map.md
examples/: expense_tracker_prompt.txt  todo_app_prompt.txt
src/agent_builder/: __init__.py  __main__.py  cli.py  cli_display.py  config.py
tests/: conftest.py
tests/e2e/: test_calculator_build.py  test_cli_e2e.py  test_expense_build.py  test_todo_build.py
tests/integration/: test_calculator_integration.py  test_llm_integration.py  test_planner_integration.py
tests/unit/: test_base_agent.py  test_budget.py  test_build_output_validation.py  test_chroma_store.py  test_chunker.py  test_cli.py  test_code_parser.py  test_code_patches.py  test_coder_agent.py  test_coder_design_context.py  test_coder_index_context.py  test_config.py  test_cost_aggregates.py  test_coverage.py  test_dashboard_doctor.py  test_dashboard_flet_ui.py  test_dashboard_replay_store.py  test_dashboard_selectors.py  test_dashboard_store.py  test_dependency_graph_canvas.py  test_design_parser.py  test_devops_agent.py  (+35 more)
(+121 files in other folders)
