[project]
name = "agent-team-builder"
version = "0.1.0"
description = "Multi-agent AI system that autonomously builds Flet desktop applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zaki" }]
dependencies = [
    "anthropic>=0.40.0",
    "ollama>=0.3.0",
    "chromadb>=0.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "transitions>=0.9.0",
    "watchdog>=4.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]
docker = ["docker>=7.0.0"]
dashboard = [
    "flet>=0.24.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
]

[project.scripts]
agent-builder = "agent_builder.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: tests that call external services (require env vars)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_builder"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["chromadb.*", "ollama.*", "transitions.*", "tree_sitter.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["call-arg", "comparison-overlap"]

[[tool.mypy.overrides]]
module = "agent_builder.indexing.watcher"
disable_error_code = ["misc", "assignment"]

[[tool.mypy.overrides]]
module = [
    "agent_builder.llm.claude_client",
    "agent_builder.llm.ollama_client",
    "agent_builder.indexing.embedder",
]
disable_error_code = ["misc", "assignment"]

[tool.coverage.run]
source = ["agent_builder"]
branch = true
